--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.74.0",
     "axios": "^1.12.2",
     "framer-motion": "^12.23.22",
     "next": "15.5.3",
